Cleaned code a little bit

--- a/default.config
+++ b/default.config
@@ -12,7 +12,7 @@ pos_tagger = scispacy
 lemmatizer = scispacy
 chunker = opennlp
 opennlp_host = localhost
-opennllp_port = 8080
+opennlp_port = 8080
 
 [LEXACCESS]
 host = localhost
