--- a/default.config
+++ b/default.config
@@ -13,6 +13,7 @@ lemmatizer = scispacy
 chunker = opennlp
 opennlp_host = localhost
 opennlp_port = 8080
+opennlp = /Users/mjsarol/Packages/apache-opennlp-1.9.3
 
 [LEXACCESS]
 host = localhost
