Refactored NLP preprocessing

--- a/default.config
+++ b/default.config
@@ -1,7 +1,7 @@
 [I/O]
 input_format = dir
 input_file_format = plaintext
-input_path = test_files/plaintext
+input_path = test_files/simple_test_sentences
 output_path = test_output
 
 [NLP]
