tar file over fork

--- a/default.config
+++ b/default.config
@@ -1,31 +1,1 @@
-[I/O]
-input_format = dir
-input_file_format = plaintext
-input_path = test_files/plaintext
-output_path = test_output
-
-[NLP]
-spacy = en_core_sci_sm
-sentence_splitter = default
-tokenizer = scispacy
-pos_tagger = scispacy
-lemmatizer = scispacy
-chunker = opennlp
-opennlp_host = localhost
-opennlp_port = 8080
-opennlp = /Users/mjsarol/Packages/apache-opennlp-1.9.3
-
-[LEXACCESS]
-host = localhost
-port = 8085
-
-[SERVERS]
-host = ec2-18-223-119-81.us-east-2.compute.amazonaws.com
-metamaplite_port = 12345
-wsd_port = 12346
-gnormplus_port = 12347
-hierarchy_port = 12349
-
-[SEMREP]
-semrules = resources/semrules2020.xml
-ontology_db = resources/12859_2020_3517_MOESM2_ESM.txt
+refactored.config
