--- a/default.config
+++ b/default.config
@@ -6,18 +6,10 @@ output_path = test_output
 
 [NLP]
 spacy = en_core_sci_sm
-sentence_splitter = default
-tokenizer = scispacy
-pos_tagger = scispacy
-lemmatizer = scispacy
+lexaccess_path = /Users/mjsarol/Documents/BioNLP/lexAccess2016/bin/lexAccess
 chunker = opennlp
-opennlp_host = localhost
-opennlp_port = 8080
-opennlp = /Users/mjsarol/Packages/apache-opennlp-1.9.3
-
-[LEXACCESS]
-host = localhost
-port = 8085
+chunker_path = /Users/mjsarol/Packages/apache-opennlp-1.9.3
+ontologies = GNormPlus, MetamapLite
 
 [SERVERS]
 host = ec2-18-223-119-81.us-east-2.compute.amazonaws.com
