--- a/default.config
+++ b/default.config
@@ -1,7 +1,7 @@
 [I/O]
 input_format = dir
 input_file_format = plaintext
-input_path = test_files/simple_test_sentences
+input_path = test_files/simple_test_sentences/
 output_path = test_output
 
 [NLP]
@@ -9,7 +9,7 @@ spacy = en_core_sci_sm
 lexaccess_path = /Users/mjsarol/Documents/BioNLP/lexAccess2016/bin/lexAccess
 chunker = opennlp
 chunker_path = /Users/mjsarol/Packages/apache-opennlp-1.9.3
-ontologies = GNormPlus, MetamapLite
+ontologies = MetamapLite
 
 [SERVERS]
 host = ec2-3-144-241-74.us-east-2.compute.amazonaws.com
